2006-03-20  Peter Johanson  <peter@peterjohanson.com>

	* src/Actions.cs: Add clear playlist shortcut (Sebastian Heinlein in
	bug #319180), and change Previous mnemonic so as not to collide with
	Play mnemonic (Wouter Bolsterlee in bug #312509).

2006-03-13  Peter Johanson  <peter@peterjohanson.com>

	* README: Updated a few dependancy details.
	* doc/Makefile.am: Make parallel build safe.

2006-02-15  Peter Johanson <peter@peterjohanson.com>

	* README: Update the website URL.

2006-02-07  Peter Johanson <peter@peterjohanson.com>

	* configure.in: D'oh. Broke the 0.8 build stuff by dropping the
	gstreamer-gconf pkg-config foo.

2006-02-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Added 'th' (Thai) to ALL_LINGUAS.

2006-02-02  Peter Johanson <peter@peterjohanson.com>

	* plugins/TrayIcon.cs: Missed one Mono.Posix -> Mono.Unix change.

2006-01-31  Peter Johanson <peter@peterjohanson.com>

	A libmuine/player-gst-0.8.c: Copy player-gst.c to new location to
	snapshot 0.8 gstreamer support.
	* libmuine/player-gst.c: Update to use gstreamer-0.10 API. Based off
	patch from Iain <iain@gnome.org>.
	* libmuine/Makefile.am: automake updates to handle compiling either
	gstreamer 0.10.x or 0.8.x support.
	* configure.in: Add autoconf logic for selecting/detecting gstreamer
	versions, and bump version to 0.8.4.99 now that 0.8.4 is out.

2006-01-30  Jorn Baayen <jorn@openedhand.com>

	* AUTHORS:
	* MAINTAINERS:

	Added Peter.

2006-01-29  Peter Johanson <peter@peterjohanson.com>

	* configure.in: Bump to 0.8.4 for a release.

2006-01-29  Peter Johanson <peter@peterjohanson.com>

	* NEWS: Small update to changes since 0.8.3
	* libmuine/Makefile.am: Add macros.h from missing automake foo.

2006-01-29  Peter Johanson <peter@peterjohanson.com>

	* src/PlaylistWindow.cs: Fix bug where 'clear played song' failed to
	remove the cover image and song label information if it cleared the
	whole list.

2006-01-28  Peter Johanson <peter@peterjohanson.com>
